--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,18 @@
 
   <div id="chatScreen" class="hidden flex h-screen w-full max-w-4xl mx-auto rounded-2xl shadow-2xl" style="background-color: #1a1a2e;">
     <div id="chat-main" class="flex-1 flex flex-col">
-        <div class="flex items-center justify-between p-4 bg-gray-800 z-10">
-            <h2 class="text-2xl font-bold text-white">Anon-Chat</h2>
+        <div class="flex items-center justify-between p-4 bg-black z-10">
+            <h2 class="text-2xl font-bold text-white chat-title-text">Anon-Chat</h2>
+            <img src="logo.jpg" alt="Anon-Chat Logo" class="chat-title-logo" style="width: 40px; height: 40px; display: none;">
             <div class="flex items-center space-x-4">
-                <button id="killRoomBtn" title="Delete the chat room" class="hidden px-4 py-2 bg-red-700 rounded-lg hover:bg-red-800 transition-transform transform hover:scale-105 font-semibold">End Room</button>
-                <button id="leaveBtn" title="Leave the chat room" class="px-4 py-2 bg-red-500 rounded-lg hover:bg-red-600 transition-transform transform hover:scale-105 font-semibold">Leave Chat</button>
+                <button id="killRoomBtn" title="Delete the chat room" class="hidden px-4 py-2 bg-red-700 rounded-lg hover:bg-red-800 transition-transform transform hover:scale-105 font-semibold text-white">
+                    <span class="full-text">End Room</span>
+                    <span class="short-text">End</span>
+                </button>
+                <button id="leaveBtn" title="Leave the chat room" class="px-4 py-2 bg-red-500 rounded-lg hover:bg-red-600 transition-transform transform hover:scale-105 font-semibold text-white">
+                    <span class="full-text">Leave Chat</span>
+                    <span class="short-text">Leave</span>
+                </button>
             </div>
         </div>
         <div class="flex-1 p-6 overflow-y-auto" id="messages"></div>
@@ -68,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div id="chat-input-container" class="p-4 bg-gray-800 mx-auto mb-0.5 w-11/12 rounded-2xl">
+        <div id="chat-input-container" class="p-4 bg-black mx-auto mb-0.5 w-11/12 rounded-2xl">
           <div id="media-picker" class="hidden h-64 overflow-y-auto bg-gray-900 p-4 rounded-t-lg"></div>
           <div class="flex items-center space-x-2">
             <button id="emojiBtn" title="Send an emoji" class="p-3 text-2xl text-gray-400 hover:text-white transition rounded-full"><i class="far fa-smile"></i></button>
