--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,10 @@
     </div>
   </div>
 
-  <div id="chatScreen" class="hidden flex h-screen w-full max-w-4xl mx-auto rounded-2xl shadow-2xl" style="background-color: #1a1a2e;">
-    <div id="chat-main" class="flex-1 flex flex-col">
-        <div class="flex items-center justify-between p-4 bg-black z-10">
+  <div id="chatScreen" class="hidden fixed inset-0 bg-gray-900 z-50">
+    <div class="flex h-full w-full max-w-4xl mx-auto">
+      <div id="chat-main" class="flex-1 flex flex-col bg-black">
+        <div id="chat-header" class="flex items-center justify-between p-4 border-b border-gray-800">
             <h2 class="text-2xl font-bold text-white chat-title-text">Anon-Chat</h2>
             <img src="logo.jpg" alt="Anon-Chat Logo" class="chat-title-logo" style="width: 40px; height: 40px; display: none;">
             <div class="flex items-center space-x-4">
@@ -55,27 +56,7 @@
             </div>
         </div>
         <div class="flex-1 p-6 overflow-y-auto" id="messages"></div>
-        <div id="joinRequestModal" class="hidden absolute top-0 left-0 w-full h-full bg-black bg-opacity-60 flex items-center justify-center p-4">
-          <div class="bg-gray-800 p-8 rounded-lg shadow-2xl">
-            <h3 class="text-xl font-bold mb-4">Join Request</h3>
-            <p id="joinRequestUser" class="mb-4"></p>
-            <div class="flex justify-end space-x-4">
-              <button id="approveJoinBtn" class="px-4 py-2 bg-green-500 rounded-lg hover:bg-green-600">Approve</button>
-              <button id="denyJoinBtn" class="px-4 py-2 bg-red-500 rounded-lg hover:bg-red-600">Deny</button>
-            </div>
-          </div>
-        </div>
-        <div id="cancelUploadModal" class="hidden absolute top-0 left-0 w-full h-full bg-black bg-opacity-60 flex items-center justify-center p-4">
-          <div class="bg-gray-800 p-8 rounded-lg shadow-2xl">
-            <h3 class="text-xl font-bold mb-4">Cancel Upload</h3>
-            <p class="mb-4">Do you want to cancel the upload?</p>
-            <div class="flex justify-end space-x-4">
-              <button id="confirmCancelBtn" class="px-4 py-2 bg-red-500 rounded-lg hover:bg-red-600">Yes</button>
-              <button id="denyCancelBtn" class="px-4 py-2 bg-gray-500 rounded-lg hover:bg-gray-600">No</button>
-            </div>
-          </div>
-        </div>
-        <div id="chat-input-container" class="p-4 bg-black mx-auto mb-0.5 w-11/12 rounded-2xl">
+        <div id="chat-input-container" class="p-4 bg-black">
           <div id="media-picker" class="hidden h-64 overflow-y-auto bg-gray-900 p-4 rounded-t-lg"></div>
           <div class="flex items-center space-x-2">
             <button id="emojiBtn" title="Send an emoji" class="p-3 text-2xl text-gray-400 hover:text-white transition rounded-full"><i class="far fa-smile"></i></button>
@@ -84,7 +65,7 @@
               <label for="fileInput" title="Share a file" class="p-3 text-2xl text-gray-400 hover:text-white transition rounded-full cursor-pointer"><i class="fas fa-paperclip"></i></label>
               <input type="file" id="fileInput" class="hidden">
             </form>
-            <input id="messageInput" type="text" placeholder="Type a message..." class="flex-1 p-3 rounded-full bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-blue-500">
+            <div id="messageInput" contenteditable="true" data-placeholder="Type a message..." class="flex-1 p-3 rounded-full bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-blue-500" style="min-height: 48px; max-height: 150px; overflow-y: auto;"></div>
             <button id="sendBtn" title="Send message" class="p-3 bg-blue-600 rounded-full hover:bg-blue-700 transition-transform transform hover:scale-105"><i class="fas fa-paper-plane"></i></button>
           </div>
           <div class="w-full bg-gray-700 rounded-full mt-3 mb-2 hidden" id="progress-container">
@@ -92,10 +73,37 @@
             <p id="progress-text" class="text-xs text-white text-center"></p>
           </div>
         </div>
-    </div>
-    <div class="w-1/3 bg-gray-900 p-4 overflow-y-auto hidden md:block order-last">
+      </div>
+      <div class="w-1/3 bg-gray-900 p-4 overflow-y-auto hidden md:block">
         <h3 class="text-lg font-bold mb-4">Users</h3>
         <ul id="userList" class="text-gray-300"></ul>
+      </div>
+    </div>
+    <div id="joinRequestModal" class="hidden absolute top-0 left-0 w-full h-full bg-black bg-opacity-60 flex items-center justify-center p-4">
+      <div class="bg-gray-800 p-8 rounded-lg shadow-2xl">
+        <h3 class="text-xl font-bold mb-4">Join Request</h3>
+        <p id="joinRequestUser" class="mb-4"></p>
+        <div class="flex justify-end space-x-4">
+          <button id="approveJoinBtn" class="px-4 py-2 bg-green-500 rounded-lg hover:bg-green-600">Approve</button>
+          <button id="denyJoinBtn" class="px-4 py-2 bg-red-500 rounded-lg hover:bg-red-600">Deny</button>
+        </div>
+      </div>
+    </div>
+    <div id="cancelUploadModal" class="hidden absolute top-0 left-0 w-full h-full bg-black bg-opacity-60 flex items-center justify-center p-4">
+      <div class="bg-gray-800 p-8 rounded-lg shadow-2xl">
+        <h3 class="text-xl font-bold mb-4">Cancel Upload</h3>
+        <p class="mb-4">Do you want to cancel the upload?</p>
+        <div class="flex justify-end space-x-4">
+          <button id="confirmCancelBtn" class="px-4 py-2 bg-red-500 rounded-lg hover:bg-red-600">Yes</button>
+          <button id="denyCancelBtn" class="px-4 py-2 bg-gray-500 rounded-lg hover:bg-gray-600">No</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="previewModal" class="hidden fixed inset-0 bg-black bg-opacity-80 z-50 flex items-center justify-center">
+    <span id="closePreview" class="absolute top-4 right-4 text-white text-3xl cursor-pointer">&times;</span>
+    <div id="previewContent" class="max-w-full max-h-full">
     </div>
   </div>
 
