--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="output.css">
   <link rel="stylesheet" href="custom.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +16,7 @@
   <div id="joinScreen" class="flex flex-col md:flex-row h-screen">
     <div class="md:w-1/2 flex items-center justify-center text-center md:text-left p-8 md:p-16">
       <div>
-        <h1 class="text-4xl md:text-6xl font-bold leading-tight">Instant<br>Connection.<br>Zero Identity.</h1>
+        <h1 class="text-4xl md:text-6xl font-bold leading-tight" style="caret-color: transparent;">Instant<br>Connection.<br>Zero Identity.</h1>
         <p class="text-gray-400 mt-4">Your private, anonymous chat room.</p>
       </div>
     </div>
@@ -24,21 +25,21 @@
           <div class="flex justify-center">
               <img src="logo.jpg" alt="Anon-Chat Logo" style="width: 70px; height: 70px;">
           </div>
-          <h2 class="text-2xl font-bold text-white mt-4">Anon Chat</h2>
+          <h2 class="text-2xl font-bold text-white mt-4" style="caret-color: transparent;">Anon Chat</h2>
           <p class="text-gray-400">Your private, anonymous chat room.</p>
           <div class="space-y-4">
-              <input type="text" id="username" placeholder="Enter a cool codename" class="w-full px-4 py-3 bg-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-              <input type="text" id="roomKey" placeholder="Enter a secret room key" class="w-full px-4 py-3 bg-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+              <input type="text" id="username" placeholder="Enter a cool codename" class="w-full px-4 py-3 bg-gray-700 rounded-lg focus:outline-none focus-beige" style="caret-color: transparent;">
+              <input type="text" id="roomKey" placeholder="Enter a secret room key" class="w-full px-4 py-3 bg-gray-700 rounded-lg focus:outline-none focus-beige" style="caret-color: transparent;">
           </div>
           <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-              <button id="createRoomBtn" class="w-full py-3 font-semibold bg-green-500 rounded-lg hover:bg-green-600 transition-transform transform hover:scale-105">Create Room</button>
-              <button id="joinRoomBtn" class="w-full py-3 font-semibold bg-blue-500 rounded-lg hover:bg-blue-600 transition-transform transform hover:scale-105">Join Room</button>
+              <button id="createRoomBtn" class="w-full py-3 font-semibold rounded-lg transition-transform transform hover:scale-105 focus:outline-none">Create Room</button>
+              <button id="joinRoomBtn" class="w-full py-3 font-semibold rounded-lg transition-transform transform hover:scale-105 focus:outline-none">Join Room</button>
           </div>
       </div>
     </div>
   </div>
 
-  <div id="chatScreen" class="hidden fixed inset-0 bg-gray-900 z-50">
+  <div id="chatScreen" style="display: none;">
     <div class="flex h-full w-full max-w-4xl mx-auto">
       <div id="chat-main" class="flex-1 flex flex-col bg-black">
         <div id="chat-header" class="flex items-center justify-between p-4 border-b border-gray-800">
@@ -65,7 +66,7 @@
               <label for="fileInput" title="Share a file" class="p-3 text-2xl text-gray-400 hover:text-white transition rounded-full cursor-pointer"><i class="fas fa-paperclip"></i></label>
               <input type="file" id="fileInput" class="hidden">
             </form>
-            <div id="messageInput" contenteditable="true" data-placeholder="Type a message..." class="flex-1 p-3 rounded-full bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-blue-500" style="min-height: 48px; max-height: 150px; overflow-y: auto;"></div>
+            <div id="messageInput" contenteditable="true" data-placeholder="Type a message..." class="flex-1 p-3 rounded-full bg-gray-700 text-white focus:outline-none focus-beige" style="min-height: 48px; max-height: 150px; overflow-y: auto;"></div>
             <button id="sendBtn" title="Send message" class="p-3 bg-blue-600 rounded-full hover:bg-blue-700 transition-transform transform hover:scale-105"><i class="fas fa-paper-plane"></i></button>
           </div>
           <div class="w-full bg-gray-700 rounded-full mt-3 mb-2 hidden" id="progress-container">
@@ -84,8 +85,8 @@
         <h3 class="text-xl font-bold mb-4">Join Request</h3>
         <p id="joinRequestUser" class="mb-4"></p>
         <div class="flex justify-end space-x-4">
-          <button id="approveJoinBtn" class="px-4 py-2 bg-green-500 rounded-lg hover:bg-green-600">Approve</button>
-          <button id="denyJoinBtn" class="px-4 py-2 bg-red-500 rounded-lg hover:bg-red-600">Deny</button>
+          <button id="approveJoinBtn" class="px-4 py-2 rounded-lg">Approve</button>
+          <button id="denyJoinBtn" class="px-4 py-2 rounded-lg">Deny</button>
         </div>
       </div>
     </div>
