--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
     </div>
   </div>
 
-  <div id="chatScreen" style="display: none;">
+  <div id="chatScreen" style="display: none;" class="h-screen flex flex-col">
     <div class="flex h-full w-full max-w-4xl mx-auto">
-      <div id="chat-main" class="flex-1 flex flex-col bg-black">
-        <div id="chat-header" class="flex items-center justify-between p-4 border-b border-gray-800">
+      <div id="chat-main" class="flex-1 flex flex-col bg-black h-full">
+        <div id="chat-header" class="flex items-center justify-between p-4 border-b border-gray-800 sticky top-0 z-10 bg-black">
             <h2 class="text-2xl font-bold text-white chat-title-text">Anon-Chat</h2>
             <img src="logo.jpg" alt="Anon-Chat Logo" class="chat-title-logo" style="width: 40px; height: 40px; display: none;">
             <div class="flex items-center space-x-4">
@@ -56,8 +56,8 @@
                 </button>
             </div>
         </div>
-        <div class="flex-1 p-6 overflow-y-auto" id="messages"></div>
-        <div id="chat-input-container" class="p-4 bg-black">
+        <div class="flex-1 px-6 pt-6 overflow-y-auto" id="messages"></div>
+        <div id="chat-input-container" class="px-4 pb-4 bg-black">
           <div id="media-picker" class="hidden h-64 overflow-y-auto bg-gray-900 p-4 rounded-t-lg"></div>
           <div class="flex items-center space-x-2">
             <button id="emojiBtn" title="Send an emoji" class="p-3 text-2xl text-gray-400 hover:text-white transition rounded-full"><i class="far fa-smile"></i></button>
