--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
 
   <div id="chatScreen" style="display: none;" class="h-screen flex flex-col">
     <div class="flex h-full w-full max-w-4xl mx-auto">
-      <div id="chat-main" class="flex-1 flex flex-col bg-black h-screen">
-        <div id="chat-header" class="flex items-center justify-between p-4 border-b border-gray-800 fixed top-0 w-full max-w-4xl z-10 bg-black">
+      <div id="chat-main" class="flex flex-col bg-black h-full w-full">
+        <div id="chat-header" class="flex items-center justify-between p-4 border-b border-gray-800 bg-black">
             <h2 class="text-2xl font-bold text-white chat-title-text">Anon-Chat</h2>
             <img src="logo.jpg" alt="Anon-Chat Logo" class="chat-title-logo" style="width: 40px; height: 40px; display: none;">
             <div class="flex items-center space-x-4">
@@ -56,8 +56,8 @@
                 </button>
             </div>
         </div>
-        <div class="flex-1 px-6 pt-24 pb-24 overflow-y-auto" id="messages"></div>
-        <div id="chat-input-container" class="px-4 pb-4 bg-black fixed bottom-0 w-full max-w-4xl">
+        <div class="flex-1 px-6 pt-6 pb-6 overflow-y-auto" id="messages"></div>
+        <div id="chat-input-container" class="px-4 pb-4 bg-black">
           <div id="media-picker" class="hidden h-64 overflow-y-auto bg-gray-900 p-4 rounded-t-lg"></div>
           <div class="flex items-center space-x-2">
             <button id="emojiBtn" title="Send an emoji" class="p-3 text-2xl text-gray-400 hover:text-white transition rounded-full"><i class="far fa-smile"></i></button>
@@ -84,7 +84,7 @@
       <div class="bg-gray-800 p-8 rounded-lg shadow-2xl">
         <h3 class="text-xl font-bold mb-4">Join Request</h3>
         <p id="joinRequestUser" class="mb-4"></p>
-        <div class="flex justify-end space-x-4">
+        <div class.flex justify-end space-x-4">
           <button id="approveJoinBtn" class="px-4 py-2 rounded-lg">Approve</button>
           <button id="denyJoinBtn" class="px-4 py-2 rounded-lg">Deny</button>
         </div>
